@@ -23,11 +23,11 @@
         <version>1.8.7-M1</version>
     </parent>
 
-    <url>https://gitee.com/xbatis/xbatis-spring-boot-parent</url>
+    <url>https://gitee.com/mybatis-mp/mybatis-mp-spring-boot-parent/tree/springboot3</url>
     <artifactId>xbatis-spring-boot-parent</artifactId>
     <version>1.8.7-M1-spring-boot3</version>
     <description>
-        xbatis的spring启动器的parent
+        xbatis的spring3启动器的parent
     </description>
     <packaging>pom</packaging>
 
@@ -64,14 +64,17 @@
     </developers>
 
     <properties>
-        <mybatis-spring.version>2.1.2</mybatis-spring.version>
-        <spring-boot.version>2.7.18</spring-boot.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+
+        <logback.version>1.5.17</logback.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <mybatis-spring.version>3.0.4</mybatis-spring.version>
+        <spring-boot.version>3.4.5</spring-boot.version>
 
         <mybatis-freemarker.version>1.3.0</mybatis-freemarker.version>
         <mybatis-velocity.version>2.3.0</mybatis-velocity.version>
         <mybatis-thymeleaf.version>1.1.0</mybatis-thymeleaf.version>
-
-        <logging.log4j.version>2.24.3</logging.log4j.version>
 
         <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
     </properties>
@@ -94,6 +97,31 @@
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis-spring</artifactId>
                 <version>${mybatis-spring.version}</version>
+            </dependency>
+
+            <!-- log -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.version}</version>
             </dependency>
 
             <dependency>
@@ -124,12 +152,6 @@
                 <groupId>org.mybatis.scripting</groupId>
                 <artifactId>mybatis-thymeleaf</artifactId>
                 <version>${mybatis-thymeleaf.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-to-slf4j</artifactId>
-                <version>${logging.log4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -199,11 +221,24 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
+                    <parameters>true</parameters>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.3</version>
+                <configuration>
+                    <additionalOptions combine.children="append">
+                        <option>--add-modules</option>
+                        <option>java.desktop</option>
+                        <option>--add-modules</option>
+                        <option>java.sql</option>
+                    </additionalOptions>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
 </project>
